# chemical-formula-parser

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  clang-format.yml  clang-tidy.yml  coverage.yml
app/: CMakeLists.txt  main.cpp
cmake/: Coverage.cmake  Options.cmake  Tooling.cmake
cmake/install/: InstallConfig.cmake
include/cfp/: ast.hpp  library.hpp  parser.hpp  parser_error.hpp  token.hpp  token_kind.hpp  tokenizer.hpp  tokenizer_error.hpp
include/cfp/error/: parser_error.hpp  tokenizer_error.hpp
src/: CMakeLists.txt  library.cpp  parser.cpp  parser_error.cpp  token.cpp  token_kind.cpp  tokenizer.cpp  tokenizer_error.cpp
src/error/: parser_error.cpp  tokenizer_error.cpp
tests/: CMakeLists.txt  test_library.cpp  test_parser.cpp  test_tokenizer.cpp
